--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <a href="testdrive.html">Test Drive</a>
                 </div>
                 <div class="abox">
-                    <a href="#">Sign Up</a>
+                    <a href="login.html">Sign Up</a>
                 </div>
             </div>
             <div class="end">
