--- a/insurance.html
+++ b/insurance.html
@@ -487,7 +487,7 @@ a{
                     <a href="testdrive.html">Test Drive</a>
                 </div>
                 <div class="abox">
-                    <a href="#">Sign Up</a>
+                    <a href="login.html">Sign Up</a>
                 </div>
             </div>
             <div class="end">
